fix overflow

--- a/sass/_homepage.scss
+++ b/sass/_homepage.scss
@@ -88,6 +88,7 @@
   margin: 0 auto;
   max-width: 1000px;
   position: relative;
+  overflow: hidden;
 }
 
 .testimonial {
